<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.example.deezy.music_structure.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/streaming"
            style="@style/HeaderStyle"
            android:text="@string/streaming" />

        <TextView
            android:id="@+id/playlist"
            style="@style/HeaderStyle"
            android:text="@string/playlist" />

        <TextView
            android:id="@+id/library"
            style="@style/HeaderStyle"
            android:text="@string/library" />

        <TextView
            android:id="@+id/trending"
            style="@style/HeaderStyle"
            android:text="@string/trending" />

        <TextView
            android:id="@+id/store"
            style="@style/HeaderStyle"
            android:text="@string/store" />

        <TextView
            android:id="@+id/settings"
            style="@style/HeaderStyle"
            android:text="@string/settings" />

    </LinearLayout>
</ScrollView>

